Updated Paths -Datasheets from Preparation Folder

--- a/Code/2_DataPreparation_RemovingDuplicates/Morningstar_new_Dataframe_RemoveDuplicates.ipynb
+++ b/Code/2_DataPreparation_RemovingDuplicates/Morningstar_new_Dataframe_RemoveDuplicates.ipynb
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/nishitgala89/ProjectDissertation/blob/main/DataPreparation_RemovingDuplicates/Morningstar_new_Dataframe_RemoveDuplicates.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/nishitgala89/ProjectDissertation/blob/main/Code/2_DataPreparation_RemovingDuplicates/Morningstar_new_Dataframe_RemoveDuplicates.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -40,7 +40,7 @@
         "import seaborn as sns\n",
         "import plotly.express as px"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -61,14 +61,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ca5035f6-da4b-436f-99a6-89562af2743a"
+        "outputId": "f6351610-0fc0-42cf-818d-29ac080e227f"
       },
       "source": [
-        "morningstar_data_url = \"https://raw.githubusercontent.com/nishitgala89/ProjectDissertation/main/All_Equities_MorningStar.csv\"\n",
+        "morningstar_data_url = \"https://raw.githubusercontent.com/nishitgala89/ProjectDissertation/main/Datasheets/1_Preparation/1_All_Equities_MorningStar.csv\"\n",
         "morningstar_df = pd.read_csv(morningstar_data_url).set_index(\"SecId\")\n",
         "morningstar_df.info()"
       ],
-      "execution_count": 12,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,10 +158,10 @@
         "id": "j6JmUGj7wjn_"
       },
       "source": [
-        "uk_scrapped_url = \"https://raw.githubusercontent.com/nishitgala89/ProjectDissertation/main/UK_scrapped_df.csv\"\n",
+        "uk_scrapped_url = \"https://raw.githubusercontent.com/nishitgala89/ProjectDissertation/main/Datasheets/1_Preparation/2_UK_scrapped_df.csv\"\n",
         "uk_scrapped_df = pd.read_csv(uk_scrapped_url).set_index(\"SecId\")"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -179,10 +179,10 @@
         "id": "4lcjAe2Vw8nz"
       },
       "source": [
-        "eu_scrapped_url = \"https://raw.githubusercontent.com/nishitgala89/ProjectDissertation/main/Europe_scrapped_df.csv\"\n",
+        "eu_scrapped_url = \"https://raw.githubusercontent.com/nishitgala89/ProjectDissertation/main/Datasheets/1_Preparation/2_Europe_scrapped_df.csv\"\n",
         "eu_scrapped_df = pd.read_csv(eu_scrapped_url).set_index(\"SecId\")"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -207,7 +207,7 @@
         "combined_scrapped_df = pd.concat([uk_scrapped_df,eu_scrapped_df],axis=0)\n",
         "combined_scrapped_df.info()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -290,7 +290,7 @@
         "all_morningstar_index = morningstar_df.index.to_list()\n",
         "len(all_morningstar_index)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -317,7 +317,7 @@
         "all_scrapped_index = combined_scrapped_df.index.to_list()\n",
         "len(all_scrapped_index)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -348,7 +348,7 @@
         "    print(\"Error for --> \", index)\n",
         "all_morningstar_index"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -370,7 +370,7 @@
       "source": [
         "morningstar_df.drop(index=[\"F00000X3G0\"], inplace=True)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -381,7 +381,7 @@
       "source": [
         "morningstar_df.reset_index(inplace=True)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -392,7 +392,7 @@
       "source": [
         "df = morningstar_df.groupby(['CategoryName','ManagerTenure','AverageMarketCapital','StarRatingM255'])['SecId'].count().to_frame()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -403,7 +403,7 @@
       "source": [
         "df.reset_index(inplace=True)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -418,7 +418,7 @@
       "source": [
         "df.info()"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -448,7 +448,7 @@
       "source": [
         "morningstar_df.set_index('SecId', inplace=True)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -466,7 +466,7 @@
         "                  & (morningstar_df.CategoryName == 'Europe Equity Income')\n",
         "                  & (morningstar_df.AverageMarketCapital == 24636.42657)].index)[0]"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -502,7 +502,7 @@
         "\n",
         "len(new_index)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -528,7 +528,7 @@
       "source": [
         "len(set(new_index))"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -550,7 +550,7 @@
       "source": [
         "new_df = pd.DataFrame(data=morningstar_df,index=new_index)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -565,7 +565,7 @@
       "source": [
         "new_df.info()"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -639,7 +639,7 @@
       "source": [
         "new_scrapped_df = pd.DataFrame(data=combined_scrapped_df,index=new_index)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -654,7 +654,7 @@
       "source": [
         "new_scrapped_df.info(verbose=False)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -822,10 +822,10 @@
         "id": "X8aY9ix-tTdi"
       },
       "source": [
-        "new_df.to_csv('Morningstar_new_df.csv')\n",
-        "new_scrapped_df.to_csv('Scrapped_new_df.csv')"
+        "new_df.to_csv('3_Morningstar_new_df.csv')\n",
+        "new_scrapped_df.to_csv('3_Scrapped_new_df.csv')"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     }
   ]
